--- a/.github/workflows/build_crom_kernel_n3.yml
+++ b/.github/workflows/build_crom_kernel_n3.yml
@@ -1,5 +1,4 @@
-name: Build Kernel for OnePlus Nord 3 (MT6983)
-
+name: Build Crom Kernel for OnePlus Nord 3 (MT6983)
 on:
   workflow_dispatch:
     inputs:
