fixed kernel paths

--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -338,7 +338,7 @@ jobs:
           export PATH="/usr/lib/ccache:$PATH"
           export CC="ccache clang"
           sudo apt install -y libelf-dev ccache
-          cd kernel_workspace/kernel_platform/common
+          cd kernel_workspace/kernel-5.10/
           MAKE_ARGS="LLVM=1 ARCH=arm64 CROSS_COMPILE=aarch64-linux-gnu- \
             RUSTC=../../prebuilts/rust/linux-x86/1.73.0b/bin/rustc \
             PAHOLE=../../prebuilts/kernel-build-tools/linux-x86/bin/pahole \
