--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -214,7 +214,13 @@ jobs:
         run: |
           echo "BUILD_CONFIG=$GITHUB_WORKSPACE/kernel_workspace/kernel-5.10/build.config.oplus6983" >> $GITHUB_ENV
 
-
+      - name: Vendor Debug
+        run: |
+          pwd
+          ls
+          cd vendor 
+          pwd
+          ls
 
       # # Custom kernel suffix
       # - name: Custom Kernel Suffix if set
