--- a/.github/workflows/build_stock_kernel_n3.yml
+++ b/.github/workflows/build_stock_kernel_n3.yml
@@ -216,11 +216,39 @@ jobs:
 
       - name: Vendor Debug
         run: |
+          echo "pwd"
           pwd
+          echo "ls"
           ls
-          cd vendor 
+          echo "cd kernel_workspace"
+          cd kernel_workspace
+          echo "pwd"
           pwd
+          echo "ls"
           ls
+          echo "cd kernel_module"
+          cd kernel_module
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          echo "moving every thing one dir up"
+          mv kernel_module/vendor .
+          mv kernel_module/kernel .
+          mv kernel_module/kernel-5.15 .
+          mv kernel_module/kernel-4.19 .
+          mv kernel_module/kernel-4.14 .
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          cd ..
+          echo "pwd"
+          pwd
+          echo "ls"
+          ls
+          echo "rm -rf kernel_module"
+          rm -rf kernel_module
 
       # # Custom kernel suffix
       # - name: Custom Kernel Suffix if set
